--- a/docs/delegators/manage/track-validators.mdx
+++ b/docs/delegators/manage/track-validators.mdx
@@ -1,32 +1,27 @@
 ---
 description: Keep track of updates among your validators.
-title: Track validators
+title: Track your validators
 ---
 
-import commissionChange from './assets/commission.png'
-import validatorDetails from './assets/details.png'
-import slashedValidator from './assets/slashing.png'
-import renouncedValidator from './assets/renunciation.png'
-import rewardStats from './assets/rewards.png'
+import totalStakeStats from '../assets/total-stake-stats.png'
+import slashedValidator from '../assets/slashing.png'
+import renouncedValidator from '../assets/renunciation.png'
+import rewardStats from '../assets/reward-stats.png'
 
 There are a few ways you can keep track of changes among your
-validators on [RON Staking](https://app.roninchain.com/staking):
+validators on the [RON Staking](https://app.roninchain.com/staking) page:
 
 * Before staking to a validator, learn about the validator's total stake
 by visiting **Analytics > Total Stake** in their profile.
-<img src={validatorDetails} width={1440} />
+    <img src={totalStakeStats} width={1440} />
 
 * You can also check the amount of delegators' rewards (both claimed and
 not claimed) for the last 30 days by selecting **Analytics > Rewards**.
-<img src={rewardStats} width={1440} />
-
-* If a validator has scheduled to change their commission rate,
-the clock icon appears on their profile. Hover over the icon for details.
-<img src={commissionChange} width={1440} />
+    <img src={rewardStats} width={1440} />
 
 * If a validator is punished or jailed, you can see which rewards
 they will not receive according to the slashing tier they’re in.
-<img src={slashedValidator} width={1440} />
+    <img src={slashedValidator} width={1440} />
 
 * If a validator requested renunciation, you can see when it takes effect.
-<img src={renouncedValidator} width={1440} />
+    <img src={renouncedValidator} width={1440} />
