--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -38,13 +38,12 @@ Guides on using Ronin dApps (decentralized apps).
 
 ## Stake RON
 
-Stake RON to earn staking rewards, manage your stake, track your validators.
+Stake RON to earn staking rewards, claim or restake rewards, and more.
 
 <DocCardList items={[ 
     findSidebarItem('/delegators/onboarding/become-delegator'),
-    findSidebarItem('/delegators/manage/increase-withdraw-stake'),
+    findSidebarItem('/delegators/manage/manage-stake'),
     findSidebarItem('/delegators/manage/claim-rewards'),
-    findSidebarItem('/delegators/manage/view-activity'),
     findSidebarItem('/delegators/manage/track-validators'),
     findSidebarItem('/delegators/delegator-faq'),
     ]} />
