feat: update Acquire RON guide

--- a/docs/delegators/index.mdx
+++ b/docs/delegators/index.mdx
@@ -5,10 +5,10 @@ title: Delegators
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Buy RON
+## Acquire RON
 
 <DocCardList items={[
-    findSidebarItem('/basics/buy-ron'),
+    findSidebarItem('/basics/acquire-ron'),
     ]} />
 
 ## Stake RON
