--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -18,7 +18,7 @@ This guide shows how to stake your RON tokens to your favorite validators to hel
 
 ## Before you start
 
-[Have RON tokens](./../../basics/buy-ron.mdx) in your Ronin Wallet.
+[Have RON tokens](./../../basics/acquire-ron.mdx) in your Ronin Wallet.
 
 ## Stake your RON
 
