--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -13,7 +13,7 @@ General information about the Ronin chain and a guide on buying RON.
 
 <DocCardList items={[ 
     findSidebarItem('/basics/introduction'),
-    findSidebarItem('/basics/buy-ron'),
+    findSidebarItem('/basics/acquire-ron'),
     findSidebarItem('/basics/key-concepts'),
     findSidebarItem('/basics/white-paper'),
     findSidebarItem('/basics/tokenomics'),
