--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -35,7 +35,7 @@ total validator set.
 
 ## Before you start
 
-Before registering as a Validator Candidate, make sure that you have at least 250,000 RON for the initial stake. To acquire RON, see [Buy RON](./../../basics/buy-ron.mdx).
+Before registering as a Validator Candidate, make sure that you have at least 250,000 RON for the initial stake. To learn how to purchase RON, see [Acquire RON](./../../basics/acquire-ron.mdx).
 
 ## Register
 
