feat: screenshots in Track validators and prerequisites in Stake RON

--- a/docs/basics/acquire-ron.mdx
+++ b/docs/basics/acquire-ron.mdx
@@ -8,11 +8,15 @@ import purchaseSite from './assets/purchase-site.png'
 
 ## Overview
 
-RON is the native token of Ronin, and can be used to pay for gas 
-fees and participate in staking. There are several ways to purchase RON and other tokens on Ronin.
-You can purchase them through a centralized exchange (CEX), On-ramp solutions, and a decentralized exchange (DEX).
+The RON token is the ecosystem token for the Ronin blockchain which enables you to pay for transactions on Ronin and participate in securing the network via staking to validators.
+There are several ways to purchase RON and other tokens on Ronin. You can purchase them through a centralized exchange (CEX), On-ramp solutions, and a decentralized exchange (DEX).
 
-## Purchase through a CEX
+## Set up Ronin Wallet
+
+To store, trade, and receive the RON token you need a cryptocurrency wallet that supports the Ronin blockchain — Ronin Wallet.
+For setup instructions, see [Get started with the Ronin Wallet mobile app](https://support.roninchain.com/hc/en-us/articles/14037076528283-Getting-Started-on-Ronin-Mobile-Wallet).
+
+## Purchase RON through a CEX
 
 A CEX is a business that allows you to buy RON
 with traditional currency. After purchasing RON from a CEX, you can then send it back to your Ronin Wallet to enjoy
@@ -34,7 +38,7 @@ Are you a centralized exchange looking to list RON? If so, send us an email at
 [hello@roninchain.com](mailto:hello@roninchain.com).
 :::
 
-## Purchase through On-ramp providers
+## Purchase RON through On-ramp providers
 
 Ronin has the following official On-ramp partners:
 
@@ -48,7 +52,7 @@ You can purchase RON either in the Ronin Wallet mobile app or in your browser:
 
 <img src={purchaseSite} width={1280} />
 
-## Purchase using Katana DEX
+## Purchase RON using Katana DEX
 
 Katana ([katana.roninchain.com](https://katana.roninchain.com/)) is the official DEX supported on Ronin. 
 It allows you to exchange RON for other tokens in the Ronin ecosystem (such as AXS and SLP) using existing
@@ -66,3 +70,7 @@ The Ronin Bridge method requires that you already have funds on the Ethereum blo
 For more information on using Ronin Bridge, see this video tutorial:
 
 <div class='embed-container'><iframe src='https://www.youtube.com/embed/cGLnULpBtC4' frameborder='0' allowfullscreen></iframe></div>
+
+## See also
+
+[Stake RON](../delegators/onboarding/become-delegator.mdx)
