--- a/docs/bridge-operators/index.mdx
+++ b/docs/bridge-operators/index.mdx
@@ -5,14 +5,14 @@ title: Bridge operators
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Run a node
+## Run a bridge operator
 
 <DocCardList items={[
     findSidebarItem('/bridge-operators/setup/run-bridge-operator'),
     findSidebarItem('/bridge-operators/setup/upgrade-bridge-operator'),
     ]} />
 
-## Slashing rules
+## Slashing for bridge operators
 
 <DocCardList items={[
     findSidebarItem('/bridge-operators/slashing'),
