--- a/docs/delegators/index.mdx
+++ b/docs/delegators/index.mdx
@@ -5,19 +5,19 @@ title: Delegators
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Acquire RON
+## Acquire RON token
 
 <DocCardList items={[
     findSidebarItem('/basics/acquire-ron'),
     ]} />
 
-## Stake RON
+## Stake RON to validators
 
 <DocCardList items={[
     findSidebarItem('/delegators/onboarding/become-delegator'),
     ]} />
 
-## Manage your delegator account
+## Manage your stake
 
 <DocCardList items={[
     findSidebarItem('/delegators/manage/manage-stake'),
