--- a/docs/delegators/manage/manage-stake.mdx
+++ b/docs/delegators/manage/manage-stake.mdx
@@ -3,7 +3,6 @@ description: Increase, move, or withdraw your RON stake.
 title: Manage your stake
 ---
 
-import confirmTransaction from '../assets/confirm-transaction.png'
 import delegateConfirm from '../assets/delegate-confirm.png'
 
 import stepOne from '../assets/increase-stake-step-1.png'
@@ -23,9 +22,9 @@ import withdrawCountdown from '../assets/withdraw-countdown.png'
 
 This page demonstrates how to increase you withdraw your stake from your current validator, or move it to another validator.
 
-## Before you start
+## Prerequisites
 
-Make sure you [staked RON](./../onboarding/become-delegator.mdx).
+Stake your RON tokens to a validator by following the steps in the [Stake RON](./../onboarding/become-delegator.mdx) guide.
 
 ## Increase your stake with a validator
 
