--- a/docs/delegators/manage/track-validators.mdx
+++ b/docs/delegators/manage/track-validators.mdx
@@ -4,8 +4,8 @@ title: Track your validators
 ---
 
 import totalStakeStats from '../assets/total-stake-stats.png'
-import slashedValidator from '../assets/slashing.png'
-import renouncedValidator from '../assets/renunciation.png'
+import slashedValidator from '../assets/slashed-validator.png'
+import renouncedValidator from '../assets/renounced-validator.png'
 import rewardStats from '../assets/reward-stats.png'
 
 There are a few ways you can keep track of changes among your
