--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -16,9 +16,9 @@ Stake your RON with your favorite validator to help secure the network while sim
 
 This guide shows how to stake your RON tokens to your favorite validators to help secure the network and earn staking rewards. Staking is also referred to as "delegation," named after the Delegated Proof of Stake (DPoS) consensus mechanism used by the Ronin network.
 
-## Before you start
+## Prerequisites
 
-[Have RON tokens](./../../basics/acquire-ron.mdx) in your Ronin Wallet.
+Acquire RON tokens by following the steps in the [Acquire RON](./../../basics/acquire-ron.mdx) guide.
 
 ## Stake your RON
 
