--- a/docs/validators/index.mdx
+++ b/docs/validators/index.mdx
@@ -5,9 +5,9 @@ title: Validators
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Run a node
+## Run a validator node
 
-### Ronin mainnet
+Run a node on the Ronin mainnet:
 
 <DocCardList items={[
     findSidebarItem('/validators/setup/mainnet/run-validator'),
@@ -16,7 +16,7 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
     findSidebarItem('/validators/setup/mainnet/run-archive'),
     ]} />
 
-### Saigon testnet
+Run a node on the Saigon testnet:
 
 <DocCardList items={[
     findSidebarItem('/validators/setup/testnet/run-combined'),
@@ -26,11 +26,13 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
 
 ## Register as a validator
 
+Take the steps to set up your validator account:
+
 <DocCardList items={[
     findSidebarItem('/validators/onboarding/become-validator'),
     ]} />
 
-## Manage your validator account
+## Manage your account
 
 <DocCardList items={[
     findSidebarItem('/validators/manage/add-finality-vote-key'),
@@ -45,7 +47,7 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
     findSidebarItem('/validators/manage/view-profile'),
     ]} />
 
-## Slashing rules
+## Slashing rules for validators
 
 <DocCardList items={[
     findSidebarItem('/validators/slashing'),
