feat: add description for index pages

--- a/docs/bridge-operators/index.mdx
+++ b/docs/bridge-operators/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Bridge operators
+description: Learn how to run a bridge operator, participate in governance, and more.
 ---
 
 import DocCardList from '@theme/DocCardList'; 
