--- a/docs/delegators/index.mdx
+++ b/docs/delegators/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Delegators
+description: Learn how to acquire RON tokens, stake them to validators, and manage your stake.
 ---
 
 import DocCardList from '@theme/DocCardList'; 
