--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -1,5 +1,5 @@
 ---
-description: Your starting point in this documentation.
+description: Learn how to use the Ronin chain and its dApps, stake RON, run a validator node or a bridge operator node, and more.
 sidebar_label: Get started
 title: Documentation map
 ---
