--- a/docs/validators/index.mdx
+++ b/docs/validators/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Validators
+description: Learn how to run a validator node, register as a validator, manage your account, and more.
 ---
 
 import DocCardList from '@theme/DocCardList'; 
