clarify rewards timing

--- a/docs/delegators/manage/manage-stake.mdx
+++ b/docs/delegators/manage/manage-stake.mdx
@@ -1,6 +1,6 @@
 ---
-description: Increase, move, or withdraw your RON stake.
-title: Manage your stake
+description: Stake more, withdraw your stake, or transfer it to another validator.
+title: Increase, withdraw, or move your stake
 ---
 
 import delegateConfirm from '../assets/delegate-confirm.png'
@@ -102,3 +102,7 @@ moving the stake is possible.
 
 4. Confirm the transaction in your Ronin Wallet.
     <img src={moveConfirm} width={300} />
+
+## See also
+
+[Claim or restake your staking rewards](claim-rewards.mdx)
