--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -12,9 +12,20 @@ import stakingConfirm from '../assets/staking-confirm.png';
 
 ## Overview
 
-Stake your RON with your favorite validator to help secure the network while simultaneously earning some great rewards. 
+Stake your RON with your favorite validator to help secure the network while simultaneously earning some great rewards.
 
 This guide shows how to stake your RON tokens to your favorite validators to help secure the network and earn staking rewards. Staking is also referred to as "delegation," named after the Delegated Proof of Stake (DPoS) consensus mechanism used by the Ronin network.
+
+:::tip How to decide which validator to stake with
+When choosing a validator to stake with, consider the following factors to maximize your RON rewards:
+
+* A higher uptime means the validator is more reliable by keeping their node consistently running.
+* A higher interest rate means greater staking rewards.
+* If you're staking to a validator candidate, then a larger total stake means a higher chance that this validator will be one of the 10 validators chosen for block confirmation the next day.
+* Governing Validators (marked with a green checkmark) are guaranteed to always be chosen as validators.
+   
+You can always learn more about a validator by clicking their name in the list of validators on the RON Staking page.
+:::
 
 ## Prerequisites
 
@@ -28,13 +39,6 @@ Acquire RON tokens by following the steps in the [Acquire RON](./../../basics/ac
 
 2. On the **All validators** tab, choose a validator to stake your RON with, and then select **Delegate**.
    <img src={stepTwo} width={1440} />
-
-   Can't decide which validator to stake with? Here are some things to consider:
-   * A higher uptime means the validator is more reliable by keeping their node consistently running.
-   * A higher interest rate means greater staking rewards.
-   * If you're staking to a validator candidate, then a larger total stake means a higher chance that this validator will be selected to confirm blocks the next day.
-   
-   You can also learn more about a validator by clicking their name.
 
 3. Enter the amount of RON to stake, then click **Delegate**.
    <img src={stepThree} width={400} />
@@ -51,4 +55,5 @@ This shows you how much RON you staked and with which validators. This is also w
 
 ## See also
 
-[Increase, withdraw, or move your stake](./../manage/manage-stake.mdx)
+* [Claim or restake your rewards](./../manage/claim-rewards.mdx)
+* [Increase, withdraw, or move your stake](./../manage/manage-stake.mdx)
