--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -55,5 +55,5 @@ This shows you how much RON you staked and with which validators. This is also w
 
 ## See also
 
-* [Claim or restake your rewards](./../manage/claim-rewards.mdx)
+* [Claim or restake your staking rewards](./../manage/claim-rewards.mdx)
 * [Increase, withdraw, or move your stake](./../manage/manage-stake.mdx)
