feat: add example of reward calculation

--- a/docs/delegators/manage/claim-rewards.mdx
+++ b/docs/delegators/manage/claim-rewards.mdx
@@ -14,13 +14,16 @@ import restakeConfirm from '../assets/restake-confirm.png'
 
 This page describes how to claim your RON staking rewards or restake them to your favorite validator.
 
-:::info How staking rewards are calculated
-Your rewards are calculated based on your lowest balance per day.
-This means that if it's your first day to delegate, you will not
+## How staking rewards are calculated
+
+Your rewards are calculated based on your lowest balance per day. This means that if it's your first day to delegate, you will not
 receive any rewards for that period because your lowest balance for that day is zero.
-You will only get rewards if the validators you chose to delegate to get selected for block confirmation for that day.
-It's also possible that you get less or no rewards if your chosen validator is punished due to being unavailable or due to malicious activities.
-:::
+If it's not your first day to delegate, then consider this example:
+imagine that your current stake is 1000. If you withdraw 600 RON, then by the end of the day,
+you will only receive rewards based on the 400 RON left in your stake.
+
+Other things to consider is that you will only get rewards if the validators you chose to delegate to get selected for block confirmation for that day.
+You might also get less or no rewards at all if your chosen validator is punished due to being unavailable or due to malicious activities.
 
 ## Claim your rewards
 
