--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -16,7 +16,8 @@ Stake your RON with your favorite validator to help secure the network while sim
 
 This guide shows how to stake your RON tokens to your favorite validators to help secure the network and earn staking rewards. Staking is also referred to as "delegation," named after the Delegated Proof of Stake (DPoS) consensus mechanism used by the Ronin network.
 
-:::tip How to decide which validator to stake with
+## How to decide which validator to stake with
+
 When choosing a validator to stake with, consider the following factors to maximize your RON rewards:
 
 * A higher uptime means the validator is more reliable by keeping their node consistently running.
@@ -24,8 +25,7 @@ When choosing a validator to stake with, consider the following factors to maxim
 * If you're staking to a validator candidate, then a larger total stake means a higher chance that this validator will be one of the 10 validators chosen for block confirmation the next day.
 * Governing Validators (marked with a green checkmark) are guaranteed to always be chosen as validators.
    
-You can always learn more about a validator by clicking their name in the list of validators on the RON Staking page.
-:::
+You can always learn more about a validator by clicking their name in the list of validators on the [RON Staking](https://app.roninchain.com/staking) page.
 
 ## Prerequisites
 
