fix: address feedback

--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -21,10 +21,10 @@ This guide shows how to stake your RON tokens to your favorite validators to hel
 When choosing a validator to stake with, consider the following factors to maximize your RON rewards:
 
 * A higher uptime means the validator is more reliable by keeping their node consistently running.
-* A higher interest rate means greater staking rewards.
+* A higher annual performance rate (APR) means greater staking rewards.
 * If you're staking to a validator candidate, then a larger total stake means a higher chance that this validator will be one of the 10 validators chosen for block confirmation the next day.
 * Governing Validators (marked with a green checkmark) are guaranteed to always be chosen as validators.
-   
+
 You can always learn more about a validator by clicking their name in the list of validators on the [RON Staking](https://app.roninchain.com/staking) page.
 
 ## Prerequisites
