feat: add note on unclaimed rewards

--- a/docs/validators/manage/address.mdx
+++ b/docs/validators/manage/address.mdx
@@ -11,9 +11,11 @@ import changeStepTwo from './assets/change-admin-address-2.png';
 
 This guide describes how to change your admin address, which is the address you use to manage your profile and staking activities, and to claim self-staking rewards.
 
-:::info
-After changing the admin address, you will not receive the self-staking rewards on that day. You can still, however, earn your commission as normal.
-:::
+Key points:
+
+* You will not receive self-staking rewards on the day when you change the admin address, but you will still earn your commission as normal.
+* Your self-staking rewards will be sent to the new address starting the next day.
+* Any unclaimed rewards from your old admin address will remain there, and you can claim them at any time by logging in with the old admin address.
 
 ## Change your admin address {#admin}
 
