--- a/docs/validators/manage/change-commission.mdx
+++ b/docs/validators/manage/change-commission.mdx
@@ -7,8 +7,7 @@ import stepOne from './assets/change-commission-step-1.png';
 import stepTwo from './assets/change-commission-step-2.png';
 import stepThree from './assets/change-commission-step-3.png';
 
-When [registering](./../onboarding/become-validator.mdx) to become
-a validator, you set a commission rate—the percentage of the block reward
+When signing up as a validator on Ronin, you were asked to set a commission rate, which is the percentage of the block reward
 you receive before distributing the rest to your delegators.
 
 You can change this commission rate in your profile.
@@ -18,11 +17,10 @@ your account > **Commission rate**.
 <img src={stepOne} width={280} />
 
 2. Enter the new commission rate in the range of 0-20%,
-and set the date it takes effect.
-This date must be at least seven days from today.
+and set the date when it takes effect. This date must be at least seven days from now.
 <img src={stepTwo} width={416} />
 
-After you save the new rate, a clock icon is displayed next to the
-current rate to indicate the upcoming change.
+After saving the new, a clock icon will appear next to your
+current rate, informing users of the upcoming change.
 
 <img src={stepThree} width={280} />
