feat: add link to Validator Dashboard

--- a/docs/validators/manage/address.mdx
+++ b/docs/validators/manage/address.mdx
@@ -13,13 +13,14 @@ This guide describes how to change your admin address, which is the address you 
 
 Key points:
 
-* You will not receive self-staking rewards on the day when you change the admin address, but you will still earn your commission as normal.
-* Your self-staking rewards will be sent to the new address starting the next day.
+* You will not receive staking rewards on the day when you change the admin address, but you will still earn your commission as normal.
+* Staking rewards will be sent to your new admin address starting the next day.
+* Your current stake amount will be automatically transferred to the new admin address.
 * Any unclaimed rewards from your old admin address will remain there, and you can claim them at any time by logging in with the old admin address.
 
 ## Change your admin address {#admin}
 
-1. Open the Validator Dashboard, then go to your account, and then click **My profile**.
+1. Open the [Validator Dashboard](https://validator.roninchain.com), then go to your account, and then click **My profile**.
    <img src={profile} width={280} />
 
 2. In the **Admin Address** field, click the edit icon.
