--- a/docs/validators/manage/change-commission.mdx
+++ b/docs/validators/manage/change-commission.mdx
@@ -12,15 +12,12 @@ you receive before distributing the rest to your delegators.
 
 You can change this commission rate in your profile.
 
-1. Go to [Validator Dashboard](https://validator.roninchain.com) >
-your account > **Commission rate**.
-<img src={stepOne} width={280} />
+1. Open the [Validator Dashboard](https://validator.roninchain.com), then go to your account, and then click **Commission rate**.
+   <img src={stepOne} width={280} />
 
-2. Enter the new commission rate in the range of 0-20%,
-and set the date when it takes effect. This date must be at least seven days from now.
-<img src={stepTwo} width={416} />
+2. Enter the new commission rate in the range of 0-20%, and set the date when it takes effect. This date must be at least seven days from now.
+   <img src={stepTwo} width={400} />
 
-After saving the new, a clock icon will appear next to your
-current rate, informing users of the upcoming change.
+After you save the new rate, users will see a clock icon next to your current rate, indicating that a change is pending.
 
 <img src={stepThree} width={280} />
