--- a/docs/validators/manage/finality-vote-key.mdx
+++ b/docs/validators/manage/finality-vote-key.mdx
@@ -96,4 +96,6 @@ BLS proof #0: {redacted}
 
 4. Save the changes.
 
-There's a cooldown period of 24 hours after changing the finality vote key. That means you will not able to modify the finality vote key again until 24 hours after the last change.
+:::info[Cooldown period]
+After changing your admin address or fast finality vote key, there's a 24-hour cooldown period. During this time, you won't be able to modify either value until 24 hours after the last change.
+:::
